# pixicode

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  README.ar.md  README.bn.md  README.br.md  README.bs.md  README.da.md  README.de.md  README.es.md  README.fr.md  README.gr.md  README.it.md  README.ja.md  README.ko.md  README.md  README.no.md  README.pl.md  README.ru.md  README.th.md  README.tr.md  README.uk.md  README.zh.md  README.zht.md  SECURITY.md  flake.nix  install  install.sh  package.json  sst.config.ts  task.md  turbo.json
.cargo/: config.toml
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml
.github/workflows/: beta.yml  ci.yml  daily-issues-recap.yml  daily-pr-recap.yml  docs-locale-sync.yml  docs-update.yml  duplicate-issues.yml  generate.yml  nix-eval.yml  nix-hashes.yml  (+13 more)
.pixicode/: pixicode.jsonc  tui.jsonc
docs/: backend-rust-migration-plan.md  bench_mark.md  ollama-models-and-test.md  plan.md  speculative-decoding-batching-kvcache.md  speculative-decoding-bench.md  speculative-decoding-p1-api.md  speculative-decoding-plan.md
github/: README.md  action.yml  index.ts  package.json
infra/: console.ts  enterprise.ts  stage.ts
nix/: desktop.nix  node_modules.nix  opencode.nix
patches/: @opentui%2Fsolid@0.1.86.patch
script/: beta.ts  changelog.ts  duplicate-pr.ts  generate.ts  publish.ts  stats.ts  sync-zed.ts  version.ts
scripts/: bench-logprob-speculative.ts  bench-speculative-logprob-ollama.ts  bench-speculative.ts  install.sh  postinstall-opentui-solid.ts  postinstall-solid-dnd.ts  setup-ollama-models.sh  test-speculative.ts
(+30 files in other folders)
