[workspace]
resolver = "2"
members = [
    "packages/pixicode-core",
    "packages/pixicode-types",
    "packages/pixicode-tui",
    "packages/desktop/src-tauri",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "AI-powered development tool"

[workspace.dependencies]
# HTTP & Web
axum = { version = "0.8", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
hyper = { version = "1" }

# Async Runtime
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
futures = "0.3"

# Database
rusqlite = { version = "0.34", features = ["bundled"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"

# Utilities
ulid = "1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
thiserror = "2"
anyhow = "1"
base64 = "0.22"

# Signal handling
signal-hook = "0.3"
ctrlc = "3"
